tests/neg/i15266.scala
opaque type Type0 // error
opaque type Type1 = Int
opaque type Type2 <: Int = 2
opaque type Type3 >: 3 <: Int = 3
opaque class A // error
